--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="auto"
+<html data-theme="dark"
       lang="ko"
       th:fragment="layout(title, content)"
       xmlns:th="http://www.thymeleaf.org">
