refactor: 변경 로그아웃 방식 (POST -> GET) 및 관련 템플릿/CSS 수정
- 로그아웃 요청 방식을 POST에서 GET으로 변경
- `<form>` 대신 `<a>` 태그 사용으로 템플릿 간소화
- 관련 CSS (.logout-form) 제거

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,9 +17,7 @@
             <a class="primary" role="button" th:href="@{/auth/signup}">회원가입</a>
         </li>
         <li sec:authorize="isAuthenticated()">
-            <form class="logout-form" method="post" th:action="@{/auth/logout}">
-                <button class="secondary outline" type="submit">로그아웃</button>
-            </form>
+            <a class="secondary outline" role="button" th:href="@{/auth/logout}">로그아웃</a>
         </li>
     </ul>
 </nav>
