--- a/src/main/resources/templates/auth/logout-success.html
+++ b/src/main/resources/templates/auth/logout-success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" th:replace="~{fragments/base :: layout(title='로그아웃 완료', content=~{::article})}"
+<html lang="ko" th:replace="~{fragments/base :: layout(title='로그아웃 완료', content=~{::article}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>로그아웃 완료</title>
