--- a/src/main/resources/templates/board/edit.html
+++ b/src/main/resources/templates/board/edit.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko" th:replace="~{fragments/base :: layout(~{::title}, ~{::main})}"
+<html lang="ko" th:replace="~{fragments/base :: layout(title='글 수정', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>글 수정 - Board Hole</title>
+    <title>글 수정</title>
 </head>
 
 <main>
