--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" th:replace="~{fragments/base :: layout(~{::title}, ~{::main})}"
+<html lang="ko" th:replace="~{fragments/base :: layout(title='글쓰기', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>글쓰기 - Board Hole</title>
