--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" th:replace="~{fragments/base :: layout(null, ~{::main})}"
+<html lang="ko" th:replace="~{fragments/base :: layout(title='Board Hole', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Board Hole - Spring Boot 게시판</title>
