--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" th:replace="~{fragments/base :: layout(~{::title}, ~{::main})}"
+<html lang="ko" th:replace="~{fragments/base :: layout(title=${user.name + ' 프로필'}, content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${user.name + ' 프로필 - Board Hole'}">사용자 프로필 - Board Hole</title>
