--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" th:replace="~{fragments/base :: layout(title='Board Hole 회원가입', content=~{::section})}"
+<html lang="ko" th:replace="~{fragments/base :: layout(title='Board Hole 회원가입', content=~{::section}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Board Hole 회원가입</title>
