--- a/src/main/resources/templates/error/401.html
+++ b/src/main/resources/templates/error/401.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-theme="auto"
       lang="ko"
-      th:replace="~{fragments/base :: layout(~{::title}, ~{::main})}"
+      th:replace="~{fragments/base :: layout(title='인증 필요', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>인증 필요 - Board Hole</title>
