--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-theme="auto"
       lang="ko"
-      th:replace="~{fragments/base :: layout(~{::title}, ~{::main})}"
+      th:replace="~{fragments/base :: layout(title='접근 권한 없음', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>접근 권한 없음 - Board Hole</title>
