--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-theme="auto"
       lang="ko"
-      th:replace="~{fragments/base :: layout(~{::title}, ~{::main})}"
+      th:replace="~{fragments/base :: layout(title='페이지를 찾을 수 없습니다', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>페이지를 찾을 수 없습니다 - Board Hole</title>
