--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" th:replace="~{fragments/base :: layout(~{::title}, ~{::main})}"
+<html lang="ko" th:replace="~{fragments/base :: layout(title='사용자 관리', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>사용자 관리 - Board Hole</title>
