--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,7 +18,7 @@
 
     <!-- 가운데 섹션: 브랜드/로고 -->
     <ul>
-        <li><strong><a th:href="@{/}">Boardholes</a></strong></li>
+        <li><strong><a th:href="@{/}">boardholes</a></strong></li>
     </ul>
 
     <!-- 오른쪽 섹션: 컨텍스트 메뉴 + 인증 관련 -->
