--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -2,7 +2,7 @@
 <html lang="ko" th:replace="~{fragments/base :: layout(title='사용자 관리', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>사용자 관리 - Boardholes</title>
+    <title>사용자 관리 - boardholes</title>
 </head>
 
 <main>
