--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -2,7 +2,7 @@
 <html lang="ko" th:replace="~{fragments/base :: layout(title=${user.name + ' 프로필'}, content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${user.name + ' 프로필 - Boardholes'}">사용자 프로필 - Boardholes</title>
+    <title th:text="${user.name + ' 프로필 - boardholes'}">사용자 프로필 - boardholes</title>
 </head>
 
 <main>
