--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -5,7 +5,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${board.title + ' - Boardholes'}">게시글 제목 - Boardholes</title>
+    <title th:text="${board.title + ' - boardholes'}">게시글 제목 - boardholes</title>
 </head>
 <body>
 <!-- 컨텍스트 메뉴 Fragment (헤더에 주입될 부분) -->
