--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -4,7 +4,7 @@
       th:replace="~{fragments/base :: layout(title='접근 권한 없음', content=~{::main}, contextMenu=~{})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>접근 권한 없음 - Boardholes</title>
+    <title>접근 권한 없음 - boardholes</title>
 </head>
 
 <main>
