refactor: 뷰 테스트 표준화 및 인증 구조 개선
- 뷰 테스트에서 @AutoConfigureMockMvc 제거 (불필요한 중복)
- 테스트 보안 설정 분리 (API/View 용도별 구분)
- AuthCommandService 통합 및 구조 개선
- MyPageViewController -> UserDetailViewController 이름 변경
- 템플릿 파일 구조 정리 (detail.html, users.html)
- 테스트 코드 간소화 (700+ 줄 감소)

BREAKING CHANGE: 뷰 컨트롤러 및 템플릿 경로 변경

--- a/src/main/resources/templates/board/edit.html
+++ b/src/main/resources/templates/board/edit.html
@@ -12,7 +12,8 @@
     </hgroup>
 
     <article>
-        <form id="boardForm" method="post" th:action="@{/boards/{id}/edit(id=${id})}" th:object="${board}" novalidate>
+        <form id="boardForm" method="post" th:action="@{/boards/{id}(id=${id})}" th:object="${board}" novalidate>
+            <input type="hidden" name="_method" value="put"/>
             <label for="title">
                 제목
                 <input aria-required="true"
