--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -66,7 +66,8 @@
                 </li>
                 <li>
                     <form method="post"
-                          th:action="@{/boards/{id}/delete(id=${board.id})}">
+                          th:action="@{/boards/{id}(id=${board.id})}">
+                        <input type="hidden" name="_method" value="delete"/>
                         <input class="contrast" type="submit" value="🗑️ 삭제"/>
                     </form>
                 </li>
